--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
+/* Mobile styles */
+@media (max-width: 768px) {
+  .top_title {
+    font-size: 18px;
+  }
+  nav li {
+    margin: 0 5px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  article {
+    font-size: 16px;
+  }
+}
+
+/* General styles */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
 }
+
 .top_area {
   display: flex;
   justify-content: center;
@@ -11,11 +29,13 @@ body {
   color: black;
   flex-direction: column;
 }
+
 .top_title {
   font-size: 20px;
   font-weight: 500;
   font-weight: bold;
 }
+
 .top_content {
   display: flex;
   flex-direction: column;
@@ -25,10 +45,12 @@ body {
   padding: auto;
   margin-bottom: 8px;
 }
+
 .top_content h3 {
   margin-top: 1px;
   margin-bottom: 1px;
 }
+
 header {
   background-color: #466585;
   color: white;
@@ -95,27 +117,16 @@ article {
   line-height: 1.5;
   color: #333;
 }
-article p {
-  font-size: 20 px;
 
-  text-align: justify;
-  font-family: Arial, sans-serif;
-  font-weight: 400;
-}
-li {
-  font-size: 20px;
-
-  text-align: justify;
-  font-family: Arial, sans-serif;
-  font-weight: 400;
-}
+article p,
+li,
 p {
   font-size: 20px;
-
   text-align: justify;
   font-family: Arial, sans-serif;
   font-weight: 400;
 }
+
 pre {
   background-color: #f5f5f5;
   padding: 10px;
@@ -137,12 +148,14 @@ code {
   margin-top: 10;
   margin-bottom: 10px;
 }
+
 .title h3 {
   font-size: 20px;
   font-weight: bold;
   font-family: Arial, sans-serif;
   font-weight: 500;
 }
+
 hr.new3 {
   border-top: 0.5px dotted grey;
   margin-top: 10px;
