--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-/* Mobile styles */
-@media (max-width: 768px) {
-  .top_title {
-    font-size: 18px;
-  }
-  nav li {
-    margin: 0 5px;
-  }
-  h2 {
-    font-size: 24px;
-  }
-  article {
-    font-size: 16px;
-  }
-}
-
 /* General styles */
 body {
   font-family: Arial, sans-serif;
@@ -145,7 +129,7 @@ code {
 .result h4 {
   color: darkgrey;
   font-size: 15px;
-  margin-top: 10;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -160,4 +144,25 @@ hr.new3 {
   border-top: 0.5px dotted grey;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .top_title {
+    font-size: 18px;
+  }
+  nav li {
+    margin: 0 5px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  article {
+    font-size: 16px;
+  }
+  article p,
+  li,
+  p {
+    font-size: 18px;
+  }
 }
